--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
-      "es6"
+      "es6",
+      "es2015",
+      "es2017"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -27,7 +28,9 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "target": "es2015",
+    "downlevelIteration": true
   },
   "include": [
     "next-env.d.ts",
