--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-here-change-in-production
+NEXTAUTH_SECRET=your-secret-key-here
 
 # OAuth Providers
 GOOGLE_CLIENT_ID=your-google-client-id
@@ -7,6 +7,12 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
+
+# News API Configuration
+NEWS_API_KEY=your-news-api-key-here
+
+# Guardian API Configuration (Alternative)
+GUARDIAN_API_KEY=your-guardian-api-key-here
 
 # Database
 DATABASE_URL="file:./dev.db"
