--- a/package.json
+++ b/package.json
@@ -9,28 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "next-auth": "^4.24.5",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "prisma": "^5.7.1",
-    "@prisma/client": "^5.7.1",
     "@heroicons/react": "^2.0.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.7.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@reduxjs/toolkit": "^2.8.2",
     "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0"
+    "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.515.0",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "prisma": "^5.7.1",
+    "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
+    "react-redux": "^9.2.0",
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.19.1",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "5.8.3"
   }
 }
