--- a/.env.local
+++ b/.env.local
@@ -1,22 +1,17 @@
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-here
 
-# OAuth Providers
-GOOGLE_CLIENT_ID=382608183550-om3ul8km3p2e84lhr20g7ls24l1nen3o.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=[use the actual secret from the screenshot, not the asterisks]
+# Firebase Configuration
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCNVG8q_TbpD9ivyrFqpMdxdHdlhlDPlyU
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=admin-dashboard-463118.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=admin-dashboard-463118
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=admin-dashboard-463118.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=382608183550
+NEXT_PUBLIC_FIREBASE_APP_ID=1:382608183550:web:415eac69572cafe29355af
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-68LT5S5MXK
 
-# GitHub OAuth - Replace with your actual GitHub OAuth app credentials
-# Create OAuth app at: https://github.com/settings/developers
-# Callback URL: http://localhost:3000/api/auth/callback/github
-GITHUB_CLIENT_ID=your-github-client-id
-GITHUB_CLIENT_SECRET=your-github-client-secret
+
 
 # News API Configuration
 NEWS_API_KEY=61e6d7b09b8c484b8fd0a206f92b1a8b
-
-# Guardian API Configuration (Alternative)
-GUARDIAN_API_KEY=your-guardian-api-key-here
-
 
 
 # Database
